# kube5GC

./: .gitignore  Makefile.am  README.md  configure.ac  main.c  nextepc-amfd
.github/: FUNDING.yml
deploy/: sriov-crd.yaml  sriovdp-deploy.yaml
deploy/nctu5GC/: amf-deployment-SRIOV.yaml  amf-freediameter-configmap.yaml  free5gc-configmap.yaml  hss-freediameter-configmap.yaml  hss-nextepc-configmap.yaml  hss-nextepc-deployment.yaml  hss-service.yaml  namespace.yaml  pcrf-deployment.yaml  pcrf-freediameter-configmap.yaml  pcrf-nextepc-configmap.yaml  pcrf-nextepc-deployment.yaml  pcrf-service.yaml  smf-deployment.yaml  smf-freediameter-configmap.yaml  smf-service-NP.yaml  u1-u2-deployment.yaml  upf-deployment-DPDK.yaml  upf-deployment-SRIOV.yaml  webui-deployment.yaml  webui-service-NP.yaml  webui-service.yaml
docker/nextepc-base/: Dockerfile
docker/nextepc-build/: Dockerfile  setup.sh
docker/webui/: Dockerfile
helm-charts/free5gcservice/: Chart.yaml  values.yaml
lib/: Makefile.am
lib/cJSON/: Makefile.am
lib/freeDiameter-1.2.1/: Makefile.am  configure.ac
lib/gtp/: gtp_conv.c  gtp_conv.h  gtp_node.c
lib/nas/: nas_types.h
lib/nasfor5g/: nas_decoder.c  nas_encoder.c  nas_ies.c  nas_ies.h  nas_message.h
lib/nextepc/: Makefile.am
lib/ngap/: Makefile.am  ngap_asn1c.h  ngap_decoder.c  ngap_encoder.c  ngap_free.c  ngap_message.h
lib/ngap/asn1c/: Makefile.am  Makefile.am.asn1convert  Makefile.am.libasncodec  NGAP_AMF-TNLAssociationSetupItem.c  NGAP_AMF-TNLAssociationSetupItem.h  NGAP_AMF-TNLAssociationSetupList.c  NGAP_AMF-TNLAssociationSetupList.h  NGAP_AMF-TNLAssociationToAddItem.c  NGAP_AMF-TNLAssociationToAddItem.h  NGAP_AMF-TNLAssociationToAddList.c  NGAP_AMF-TNLAssociationToAddList.h  NGAP_AMF-TNLAssociationToRemoveItem.c  NGAP_AMF-TNLAssociationToRemoveItem.h  NGAP_AMF-TNLAssociationToRemoveList.c  NGAP_AMF-TNLAssociationToRemoveList.h  NGAP_AMF-TNLAssociationToUpdateItem.c  NGAP_AMF-TNLAssociationToUpdateItem.h  NGAP_AMF-TNLAssociationToUpdateList.c  NGAP_AMF-TNLAssociationToUpdateList.h  NGAP_AMF-UE-NGAP-ID.c  NGAP_AMF-UE-NGAP-ID.h  NGAP_AMFConfigurationUpdate.c  NGAP_AMFConfigurationUpdate.h  NGAP_AMFConfigurationUpdateAcknowledge.c  NGAP_AMFConfigurationUpdateAcknowledge.h  NGAP_AMFConfigurationUpdateFailure.c  NGAP_AMFConfigurationUpdateFailure.h  NGAP_AMFName.c  NGAP_AMFName.h  NGAP_AMFPointer.c  NGAP_AMFPointer.h  NGAP_AMFRegionID.c  NGAP_AMFRegionID.h  NGAP_AMFSetID.c  NGAP_AMFSetID.h  NGAP_AMFStatusIndication.c  NGAP_AMFStatusIndication.h  NGAP_AdditionalQosFlowInformation.c  NGAP_AdditionalQosFlowInformation.h  NGAP_AllocationAndRetentionPriority.c  (+896 more)
lib/ngap/support/r14.4.0/: 38413-e40.asn  38413-e40.txt
lib/pfcp/: Makefile.am  pfcp_conv.c  pfcp_conv.h  pfcp_message.c  pfcp_message.h  pfcp_node.c  pfcp_node.h  pfcp_path.c  pfcp_path.h  pfcp_types.c  pfcp_types.h  pfcp_xact.c  pfcp_xact.h
lib/pfcp/support/: 29244-f00.docx  README  pfcp_tlv.py
lib/pfcp/support/cache/: tlv_msg_55.py  tlv_msg_list.py
lib/sbiJson/: JsonTransform.c  JsonTransform.h  Makefile.am  commonJsonKey.h
libltdl/: Makefile.am
src/: Makefile.am  amf.c  epc.c  ngc.c  smf.c  upf.c
src/amf/: Makefile.am  amf4g_context.c  amf4g_context.h  amf4g_event.c  amf4g_event.h  amf4g_fd_path.c  amf4g_fd_path.h  amf4g_gtp_path.c  amf4g_gtp_path.h  amf4g_init.c  amf4g_kdf.c  amf4g_kdf.h  amf4g_path.c  amf4g_path.h  amf4g_s11_build.c  amf4g_s11_build.h  amf4g_s11_handler.c  amf4g_s11_handler.h  amf4g_s6a_handler.c  amf4g_s6a_handler.h  amf4g_sm.c  amf4g_sm.h  amf_json_build.c  amf_json_build.h  amf_json_handler.c  amf_json_handler.h  amf_n11_handler.c  amf_n11_handler.h  amf_n11_path.c  amf_n11_path.h  amf_sbi_path.c  amf_sbi_path.h  emm_build.c  emm_build.h  emm_handler.c  emm_handler.h  emm_sm.c  esm_build.c  esm_build.h  esm_handler.c  (+37 more)
src/amf/http_server/: .gitignore  Makefile.in  main.go
src/app/: Makefile.am  app.h  context.c  context.h  init.c  util.c  util.h  yaml_helper.h
src/mme/: mme_context.c  mme_context.h  mme_event.c  mme_event.h  mme_sm.c  s1ap_build.c  s1ap_build.h  s1ap_handler.c  s1ap_handler.h  s1ap_path.c  s1ap_path.h  s1ap_sm.c
src/nextepc/: Makefile.am
src/nextepc/hss/: Makefile.am
src/nextepc/pcrf/: Makefile.am
src/smf/: Makefile.am  smf_context.c  smf_context.h  smf_event.c  smf_event.h  smf_fd_path.c  smf_fd_path.h  smf_gtp_path.c  smf_gtp_path.h  smf_gx_handler.c  smf_gx_handler.h  smf_init.c  smf_ipfw.c  smf_ipfw.h  smf_json_build.c  smf_json_build.h  smf_json_handler.c  smf_json_handler.h  smf_n11_build.c  smf_n11_build.h  smf_n11_handler.c  smf_n11_handler.h  smf_n4_build.c  smf_n4_build.h  smf_n4_handler.c  smf_n4_handler.h  smf_pfcp_path.c  smf_pfcp_path.h  smf_s11_build.c  smf_s11_build.h  smf_s11_handler.c  smf_s11_handler.h  smf_sbi_build.c  smf_sbi_build.h  smf_sbi_path.c  smf_sbi_path.h  smf_sm.c  smf_sm.h
src/smf/http_server/: .gitignore  Makefile  Makefile.in  handler.go  main.go  routers.go
src/upf/: Makefile.am  upf_context.c  upf_context.h  upf_event.c  upf_event.h  upf_gtp_path.c  upf_gtp_path.h  upf_init.c  upf_ipfw.c  upf_ipfw.h  upf_n4_build.c  upf_n4_build.h  upf_n4_handler.c  upf_n4_handler.h  upf_pfcp_path.c  upf_pfcp_path.h  upf_sm.c  upf_sm.h  upf_sxb_build.c  upf_sxb_build.h  upf_sxb_handler.c  upf_sxb_handler.h
support/: Makefile.am
support/config/: Makefile.am  amf.conf.in  free5gc.conf.in  hss.conf.in  nctu5gc.conf.in  nctu5gc.testngc.conf.in  nextepc.conf.in  nextepc.testepc.conf.in  open5gc.conf.in  open5gc.testngc.conf.in  pcrf.conf.in  smf.conf.in  upf.conf.in
support/freeDiameter/: Makefile.am  amf.cert.pem  amf.conf.in  amf.key.pem  cacert.pem  hss.cert.pem  hss.conf.in  hss.key.pem  make_certs.sh  mme.cert.pem  mme.conf.in  mme.key.pem  pcrf.cert.pem  pcrf.conf.in  pcrf.key.pem  pgw.cert.pem  pgw.conf.in  pgw.key.pem  smf.cert.pem  smf.conf.in  smf.key.pem
support/https/: Makefile.am  smf.cert  smf.key
support/logrotate/: Makefile.am  free5gc.in  nctu5gc.in  open5gc.in
test/: Makefile.am  free5gc.testngc.conf.in  nctu5gc.testngc.conf.in  sample-volte.conf.in  sample.conf.in  testsuite.at
(+625 files in other folders)
